Modify ecr repo name

--- a/infrastructure/ecs.yml
+++ b/infrastructure/ecs.yml
@@ -10,7 +10,7 @@ Parameters:
   ImageURI:
     Description: URI of the ECR image to deploy
     Type: String
-    Default: ${AWS::AccountId}.dkr.ecr.eu-west-1.amazonaws.com/dynamodbLab:latest
+    Default: ${AWS::AccountId}.dkr.ecr.eu-west-1.amazonaws.com/dynamodb-lab:latest
 
   ContainerPort:
     Description: Container port for the application
