--- a/.github/workflows/cloud-formation.yml
+++ b/.github/workflows/cloud-formation.yml
@@ -26,7 +26,7 @@ jobs:
         id: deploy-vpc
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: tod-vpc-stack
+          name: todo-vpc-stack
           template: infrastructure/vpc.yml
           parameter-overrides: "EnvironmentName=todo"
           capabilities: CAPABILITY_NAMED_IAM
