--- a/.github/workflows/cloud-formation.yml
+++ b/.github/workflows/cloud-formation.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'infrastructure/**'
+      - '.github/workflows/cloud-formation.yml'
 
 jobs:
   deploy-vpc:
